test/mutation_analysis/s0925_long_pressed_name/hafis/starchat/mutants/11/result.txt
./test/mutation_analysis/s0925_long_pressed_name/hafis/starchat/mutants/11/Solution.java:23: error: unreachable statement
        while (false) {
                      ^
1 error
